add pokemon and filter component and update models for paginated results

--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,1 +1,6 @@
-<p>pokemon works!</p>
+<app-filter></app-filter>
+<app-pokemon-list>
+  <ng-container *ngFor="let pokemon of pokemon$ | async">
+    <app-pokemon-item [pokemon]="pokemon"></app-pokemon-item>
+  </ng-container>
+</app-pokemon-list>
