--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,15 +1,21 @@
-<ng-container
-*ngFor="let filter of (filters$ | async) | keyvalue"
->
-<label [for]="'id' + filter.key">
-  {{ filter.key | titlecase }}
-</label>
- <ng-select
- [items]="filter.value"
-  bindLabel="name"
-  bindValue="name"
-  [multiple]="true"
-  [clearable]="true"
-  [id]="'id-'+filter.key"
- ></ng-select>
-</ng-container>
+<form [formGroup]="filterForm">
+  <ng-container
+  *ngFor="let filter of (filters$ | async) | keyvalue"
+  >
+  <label [for]="'id' + filter.key">
+    {{ filter.key | titlecase }}
+  </label>
+   <ng-select
+   [items]="filter.value"
+    bindLabel="name"
+    bindValue="name"
+    [multiple]="true"
+    [clearable]="true"
+    [id]="'id-'+filter.key"
+    formControlName="{{filter.key}}"
+   ></ng-select>
+  </ng-container>
+</form>
+
+<button (click)="applyFilter()" >Apply Filter</button>
+<button (click)="createForm()" >Clear Filter</button>
